--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,19 @@
+ul {
+  display: flex;
+}
+
 li {
   display: inline;
   margin-right: 10px;
+}
+
+li a {
+  text-decoration: none;
+}
+
+li.active > a {
+  background-color: #000;
+  color: #fff;
+  border: 1px solid #000;
+  border-radius: 5px;
 }
